[#1187791] Improve explanation of operation outcome/results